--- a/views/session/login.pug
+++ b/views/session/login.pug
@@ -14,4 +14,7 @@ block content
         .forgot
             a(href="/forgotPassword") Olvidé mi contraseña
         
+        .google
+            a(href='/auth/google') Login con Google
+        
         button.btn.btn-primary(type="submit") Ingreso
